<resources>
    <string name="app_name" translatable="false">Žaidimugė</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="buy_cart_button">Buy</string>
    <string name="listings_from">Listings from</string>
    <string name="banner_cart">Cart</string>
    <string name="banner_wishlist">Wishlist</string>
    <string name="button_categories">Categories</string>
    <string name="button_listings">Listings</string>
    <string name="listing_description_title">Product description</string>
    <string name="button_my_listings">My listings</string>
    <string name="settings">Settings</string>
    <string name="add_listing_text">Wish to create a listing? Click the symbol:</string>
    <string name="popular_items">Popular items</string>
    <string name="newest_items">Newest items</string>
    <string name="physical_items">Physical items</string>
    <string name="my_history">My history</string>
    <string name="logout">Log out</string>
    <string name="profile">Profile</string>
    <string name="toast_missing_username_password">Name and Password must be entered</string>
    <string name="toast_user_doesnt_exist">User with this username doesn\'t exist</string>
    <string name="toast_incorrect_password">Incorrect password</string>
    <string name="toast_welcome">Welcome</string>
    <string name="toast_missing_fields">All fields must be filled</string>
    <string name="toast_password_mismatch">Repeated password does not match</string>
    <string name="toast_registration_successful">Registered successfully</string>
    <string name="login">Log in</string>
    <string name="register">Register</string>
    <string name="guest_mode">Guest Mode</string>
    <string name="enter_username">enter username</string>
    <string name="enter_password">enter password</string>
    <string name="username">username</string>
    <string name="price">price</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="repeat_password">repeat password</string>
    <string name="registration">Registration</string>
    <string name="login_name">Login</string>
    <string name="about">About</string>
    <string name="language">Language</string>
    <string name="type">Type</string>
    <string name="platform">Platform</string>
    <string name="theme">Theme</string>
    <string name="NoListings">No listings</string>
    <string-array name="languages_array">
        <item>Lietuvių</item>
        <item>English</item>
    </string-array>
    <string-array name="themes_array">
        <item>Šviesi</item>
        <item>Tamsi</item>
    </string-array>
    <string name="theme_dark">Dark</string>
    <string name="theme_light">Light</string>
    <string name="navigation_home">Home</string>
    <string name="navigation_cart">Cart</string>
    <string name="navigation_wishlist">Wishlist</string>
    <string name="navigation_profile">Profile</string>
    <string name="navigation_settings">Settings</string>
    <string name="condition_title">Condition</string>
    <string name="condition_new">New</string>
    <string name="condition_like_new">Like new</string>
    <string name="condition_very_good">Very good</string>
    <string name="condition_good">Good</string>
    <string name="condition_acceptable">Acceptable</string>
    <string name="condition_description">Condition description</string>
    <string name="order_reversed">Sorting order reversed</string>
    <string name="order_restored">Sorting order restored</string>
    <string name="dynamic_brightness">Dynamic brightness</string>
    <string name="purchases_button">Purchases</string>
    <string name="sales_button">Sales</string>
    <string name="orderstate_pending">Pending</string>
    <string name="orderstate_confirmed">Confirmed</string>
    <string name="orderstate_shipped">Shipped</string>
    <string name="orderstate_delivered">Delivered</string>
    <string name="orderstate_cancelled">Cancelled</string>
    <string name="leave_review">Leave review</string>
    <string name="view_review">View review</string>
    <string name="seller">Seller</string>
    <string name="review_rating">Rating</string>
    <string name="review_the_product">Review the product</string>
    <string name="type_digital">Digital</string>
    <string name="type_physical">Physical</string>
    <string name="condition_used">Used</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="acc_username_taken">User with this username already exists</string>
    <string name="acc_email_taken">User with this email already exists</string>
    <string name="acc_email_invalid">Invalid email format</string>
    <string name="acc_password_short">Password must be at least 4 characters long</string>
    <string name="sorting_order">Price sorting order</string>
    <string name="sort_ascending">Ascending</string>
    <string name="sort_descending">Descending</string>
    <string name="any">Any</string>
    <string name="verification_enter_code">Enter verification code</string>
    <string name="verification_code_sent">Verification code sent to</string>
    <string name="verification_code_incorrect">Incorrect code, try again</string>
    <string name="acc_new_username">Enter new username</string>
    <string name="add_listing">Add Listing</string>
    <string name="new_listing">New Listing</string>
    <string name="game_added_success">New game added successfully</string>
    <string name="add_game_title">Add Game</string>
    <string name="hint_game_name">Game name</string>
    <string name="hint_game_description">Game description</string>
    <string name="pick_image">Pick Image</string>
    <string name="clear_image_cache">Clear Image Cache</string>
    <string name="image_cache_cleared">Image cache cleared</string>
    <string name="back">Back</string>
    <string name="delete">Delete</string>
    <string name="find_closest_pickup_point">Find closest pickup point</string>
    <string name="find_on_steam">Find on Steam</string>
    <string name="search">Search</string>
    <string name="no_results">No results found</string>
    <string name="settings_disable_animations">Disable decorative animations</string>
    <string name="change_password">Change password</string>
    <string name="filters">Filters</string>
    <string name="refresh">Refresh</string>
    <string name="passw_create_new_password">Create a new password</string>
    <string name="passw_old_password">old password</string>
    <string name="passw_new_password">new password</string>
    <string name="passw_repeat_new_password">repeat new password</string>
    <string name="passw_change_password">Change password</string>
    <string name="select_a_game">Select a game</string>
    <string name="add_image">Add image</string>
    <string name="add_icon">Add icon</string>
    <string name="submit">Submit</string>
    <string name="add_photo_0_3">Add photo (0/3)</string>
</resources>