<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView4"
            style="@style/MyBanner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_name" />

        <LinearLayout
            android:layout_width="329dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextUsername"
                style="@style/MyEditTextField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/enter_username"
                android:inputType="text"
                android:layout_marginTop="@dimen/spacing_xlarge"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/editTextTextPassword"
                style="@style/MyEditTextField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:minHeight="48dp" />

            <Button
                android:id="@+id/buttonLogin"
                style="@style/MyButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_xlarge"
                android:text="@string/login" />

            <Button
                android:id="@+id/buttonRegister"
                style="@style/MyButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register" />

            <Button
                android:id="@+id/buttonGuest"
                style="@style/MyButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guest_mode" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView7"
        style="@style/MyBanner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        tools:layout_editor_absoluteX="8dp" />

</androidx.constraintlayout.widget.ConstraintLayout>