<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/main_background"
    tools:context=".AddListingFragment" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_banner">

        <TextView
            style="@style/MyBanner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/new_listing" />

        <Button
            android:id="@+id/buttonBackAddListing"
            style="@style/MyButton"
            android:layout_margin="0dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:text="@string/back" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="310dp"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/gameImage"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:scaleX="0"
            android:scaleY="0"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/selectedGameIcon"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginEnd="8dp"
                android:scaleType="centerCrop"
                android:visibility="gone" />

            <AutoCompleteTextView
                android:id="@+id/gameDropdown"
                style="@style/MyEditTextField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/select_a_game"
                android:completionThreshold="0"
                android:inputType="text"
                android:minHeight="48dp" />

        </LinearLayout>


        <EditText
            android:id="@+id/addListingPrice"
            style="@style/MyEditTextField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:elegantTextHeight="true"
            android:ems="10"
            android:hint="@string/price"
            android:inputType="text"
            android:minHeight="48dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/type" />

            <com.example.universityjava.CustomDropdown
                android:id="@+id/dropdownType"
                android:layout_width="200dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/platform" />

            <com.example.universityjava.CustomDropdown
                android:id="@+id/dropdownPlatform"
                android:layout_width="200dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/condition_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/condition_title" />

            <com.example.universityjava.CustomDropdown
                android:id="@+id/dropdownCondition"
                android:layout_width="200dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <EditText
            android:id="@+id/condition_description"
            style="@style/MyEditTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:hint="@string/condition_description"
            android:visibility="gone"/>

        <Button
            android:id="@+id/buttonImage"
            style="@style/MyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_image" />

        <LinearLayout
            android:id="@+id/physicalImageButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <Button
                android:id="@+id/buttonAddIcon"
                style="@style/MyButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/add_icon" />

            <Button
                android:id="@+id/buttonAddPhoto"
                style="@style/MyButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/add_photo_0_3" />

        </LinearLayout>

        <Button
            android:id="@+id/buttonSubmit"
            style="@style/MyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit" />

        <Button
            android:id="@+id/buttonSecond"
            style="@style/MyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete" />

    </LinearLayout>

</LinearLayout>
