<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".WishlistFragment"
    android:background="@color/main_background">

    <TextView
        style="@style/MyBanner"
        android:layout_width="match_parent"
        android:layout_height="@dimen/val_128"
        android:text="@string/banner_wishlist" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/category_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_categories" />

        <Button
            android:id="@+id/listings_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_listings" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/wishlist_list"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        tools:listitem="@layout/listing_item_editable">
    </androidx.recyclerview.widget.RecyclerView>



</LinearLayout>